@@ -96,7 +96,7 @@
       L648, 35:R#.26   @znote merida 山地车
       L654, 36:R#.27   @shader
       L700, 37:R#.28   @DirectX Tool Kit
-     Zndex_E : //z 2015-09-05 21:02:32 L.117'10648 T3132795822.K ~729 +----+----+----+----+----+
+     Zndex_E : //z 2015-09-06 13:02:12 L.116'39468 T1819795758.K ~731 +----+----+----+----+----+
      TimeCnt : //z 2015-09-05 20:38:27 L.117'12093 T1845101210.K ~31  +----+----+----+----+----+
      Reg.Cnt : //z 2015-08-18 18:06:06 L.135'21234 T728764508 .K ~28  +----+----+----+----+----+
      #28  R+ : //z 2015-08-18 18:06:06 L.135'21234 T728764508 .K ~28    V+.653  L+.691  
@@ -131,7 +131,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-09-05 21:02:32 L.117'10648 T3132795822.K ~757   R+.28   L+.793  --+----+
+     Version : //z 2015-09-06 13:02:12 L.116'39468 T1819795758.K ~759   R+.19   L+.461  --+----+
      #39  V+ : //z 2015-09-04 22:39:16 L.118'4844  T65304378  .K ~741   R+.28   L+.779  
      #38  V+ : //z 2015-08-25 17:58:14 L.128'21706 T1477339359.K ~722   R+.28   L+.757  
      #37  V+ : //z 2015-08-25 17:49:09 L.128'22251 T1476189347.K ~703   R+.28   L+.738  
@@ -458,6 +458,7 @@ http://sourceforge.net/p/osgmaxexp/code/HEAD/tree/
 01. 
 //z 2015-06-09 11:00:50 L.205'46750 T4035241548.K[T14,L381,R19,V365]
 05-25 12:54 todo 深入理解nginx redis设计与实现
+深入应用C++11：代码优化与工程级应用
 
 //z 2015-06-18 08:36:25 L.196'55415 T2695262781.K[T15,L411,R19,V375]
 http://sale.jd.com/act/Pfj50sdUDAJ.html
